Updated project properties

--- a/Soccar [UI]/nbproject/project.properties
+++ b/Soccar [UI]/nbproject/project.properties
@@ -33,9 +33,9 @@ file.reference.jbox2d-library-2.1.2.3-jar-with-dependencies.jar=lib/jbox2d-libra
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.Soccar__Physics_.jar}:\
+    ${file.reference.jbox2d-library-2.1.2.3-jar-with-dependencies.jar}:\
     ${reference.Soccar__Library_.jar}:\
-    ${file.reference.jbox2d-library-2.1.2.3-jar-with-dependencies.jar}
+    ${reference.Soccar__Physics_.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -65,8 +65,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.Soccar__Library_=../../../Soccar [Library]/Library/Soccar [Library]
-project.Soccar__Physics_=../../../Soccar [Physics]/Physics/Soccar [Physics]
+project.Soccar__Library_=../../Soccar [Library]/Soccar [Library]
+project.Soccar__Physics_=../../Soccar [Physics]/Soccar [Physics]
 reference.Soccar__Library_.jar=${project.Soccar__Library_}/dist/Soccar__Library_.jar
 reference.Soccar__Physics_.jar=${project.Soccar__Physics_}/dist/Soccar__Physics_.jar
 run.classpath=\
