--- a/Soccar [UI]/nbproject/project.properties
+++ b/Soccar [UI]/nbproject/project.properties
@@ -30,13 +30,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jbox2d-library-2.1.2.3-jar-with-dependencies.jar=lib/jbox2d-library-2.1.2.3-jar-with-dependencies.jar
+file.reference.netty-all-4.1.6.Final.jar=lib/netty-all-4.1.6.Final.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.Soccar__Physics_.jar}:\
-    ${reference.Soccar__Library_.jar}:\
     ${file.reference.jbox2d-library-2.1.2.3-jar-with-dependencies.jar}:\
-    ${reference.Soccar___Rmi-Communication_.jar}
+    ${reference.Soccar__Library_.jar}:\
+    ${reference.Soccar__Physics_.jar}:\
+    ${reference.Soccar__Rmi-Communication_.jar}:\
+    ${reference.Soccar__GameCommunication_.jar}:\
+    ${file.reference.netty-all-4.1.6.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -66,12 +69,14 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.Soccar___Rmi-Communication_=../../../Soccar (Rmi-Communication)/Rmi-Communication/Soccar [ Rmi-Communication]
-project.Soccar__Library_=../../../Soccar (Library)/Library/Soccar [Library]
-project.Soccar__Physics_=../../../Soccar (Physics)/Physics/Soccar [Physics]
-reference.Soccar___Rmi-Communication_.jar=${project.Soccar___Rmi-Communication_}/dist/Soccar___Rmi-Communication_.jar
+project.Soccar__GameCommunication_=../../Soccar [Game-Communication]/GameServer
+project.Soccar__Library_=../../Soccar [Library]/Soccar [Library]
+project.Soccar__Physics_=../../Soccar [Physics]/Soccar [Physics]
+project.Soccar__Rmi-Communication_=../../Soccar [Rmi-Communication]/Soccar [Rmi-Communication]
+reference.Soccar__GameCommunication_.jar=${project.Soccar__GameCommunication_}/dist/Soccar__GameCommunication_.jar
 reference.Soccar__Library_.jar=${project.Soccar__Library_}/dist/Soccar__Library_.jar
 reference.Soccar__Physics_.jar=${project.Soccar__Physics_}/dist/Soccar__Physics_.jar
+reference.Soccar__Rmi-Communication_.jar=${project.Soccar__Rmi-Communication_}/dist/Soccar__Rmi-Communication_.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
